dark mode fix

--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -39,7 +39,7 @@
     --bg-progress: #379634;
     --bg-group: #464646;
     --bg-stripe: #3c393a;
-    --bg-unwatched: #3c393a;
+    --bg-unreviewed: #3c393a;
     --bg-subtle: #373434;
     --border-accent: #499ef8;
     --border-default: #484745;
